--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-react": "^7.18.6",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "sort-by": "^0.0.2"
   },
@@ -26,6 +32,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "sass": "^1.58.0",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
   },
